# fckit

./: CMakeLists.txt  README.md  env-hpc2020-gnu-8.5.sh  env-hpc2020-intel-2021.4.sh  env-hpc2020-intel-2023.2.sh  env-lumi-cce-15.sh  test_atlas_lite.F90  test_inherit_final.F90
atlas_lite/: CMakeLists.txt  atlas_object.F90  atlas_object.cc  atlas_object_c_binding.F90
cmake/: final-support.cmake
env/ecmwf-hpc2020/: gnu-13.1.sh  intel-llvm-2023.2.sh  nvidia-22.11.sh
env/lumi/: cce-14.sh
fckit_lite/: CMakeLists.txt  fckit.h  fckit_owned.cc  fckit_owned_object.F90
src/: CMakeLists.txt
src/fckit/: CMakeLists.txt  fckit.h.in  fckit_C_interop.F90  fckit_owned.h  fckit_owned_object.F90
src/fckit/module/: fckit_C_interop.F90  fckit_owned.cc  fckit_owned_object.F90  fckit_shared_object.F90  fckit_shared_ptr.F90
src/fckit_reproduce/: CMakeLists.txt  fckit_reproduce.F90  fckit_reproduce.cc  fckit_reproduce_c_binding.F90  test_fckit_reproduce.F90
src/tests/: CMakeLists.txt  test_owned_object.F90
